# PROI-Poker

./: .gitignore  CMakeLists.txt  README.md
PokerLib/: Card.cpp  Card.h  CardCollection.h  Deck.cpp  Deck.h  Player.cpp  Player.h
PokerTest/: CardTest.cpp  DeckTest.cpp  PlayerTest.cpp
PokerUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  cards.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h  widget.ui
src/BotPlayer/: BotPlayer.cpp  BotPlayer.h
src/Card/: Card.cpp  Card.h
src/Card/src/: Card.h
src/CardCollection/: CardCollection.h
src/CardCollection/src/: CardCollection.h
src/Deck/: Deck.h
src/Deck/src/: Deck.h
src/Game/: Game.cpp  Game.h
src/GameBegin/: CMakeLists.txt  beginmainwindow.cpp  beginmainwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
src/GameHandler/: GameHandler.cpp  GameHandler.h
src/Hand/: Hand.h
src/Hand/src/: Hand.h
src/HumanPlayer/: HumanPlayer.cpp  HumanPlayer.h
src/Player/: Player.cpp  Player.h
src/Player/src/: Player.h
src/PokerUI/: main.cpp
src/Table/: Table.h
src/gui/: CMakeLists.txt  main.cpp
src/gui/GameBegin/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  resources.qrc
src/gui/GameHandler/: GameHandler.cpp  GameHandler.h
src/gui/PokerUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  background.qrc  cards.qrc  icon.qrc  mainwindow.ui
src/gui/PokerUI/UIPlayer/: UIPlayer.cpp  UIPlayer.h
src/poker/: CMakeLists.txt
src/poker/BotPlayer/: BotPlayer.cpp  BotPlayer.h
src/poker/Card/: Card.cpp  Card.h
src/poker/CardCollection/: CardCollection.h
src/poker/Deck/: Deck.h
src/poker/Game/: Game.cpp  Game.h
src/poker/HumanPlayer/: HumanPlayer.h
src/poker/Player/: Player.cpp  Player.h
src/utils/: Decision.h  GameInfo.cpp  GameInfo.h  Names.cpp  Names.h  Phase.h  Suit.h
src/utils/omp/: CombinedRange.cpp  HandEvaluator.h  omp_Hand.h
test/: BotPlayerTest.cpp  CMakeLists.txt  CardTest.cpp  CollectionTest.cpp  DeckTest.cpp  GameHandlerTest.cpp  GameTest.cpp  HandTest.cpp  PlayerTest.cpp
utils/: CardsTypedef.h  Value.h
utils/omp/: CardRange.h  HandEvaluator.h
